// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu - canActivate composition 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    canActivate={true}
  >
    <Styled(Internal)>
      <wrapContext
        icon="LogoRings"
      >
        Looker
      </wrapContext>
      <wrapContext
        icon="Validate"
      >
        Validate
      </wrapContext>
      <wrapContext
        icon="ChartPie"
      >
        Pizza!
      </wrapContext>
    </Styled(Internal)>
    <Styled(Internal)
      canActivate={true}
      label="Cheeses"
    >
      <wrapContext>
        Gouda
      </wrapContext>
      <wrapContext>
        Cheddar
      </wrapContext>
      <wrapContext>
        Swiss
      </wrapContext>
    </Styled(Internal)>
    <Styled(Internal)
      canActivate={false}
    >
      <wrapContext
        icon="Beaker"
      >
        Scary Stuff
      </wrapContext>
    </Styled(Internal)>
  </Menu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <HotKeys
        handlers={
          Object {
            "moveDown": [Function],
            "moveUp": [Function],
          }
        }
        keyMap={
          Object {
            "moveDown": "down",
            "moveUp": "up",
          }
        }
      >
        <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <Styled(Internal)>
            <wrapContext
              icon="LogoRings"
            >
              Looker
            </wrapContext>
            <wrapContext
              icon="Validate"
            >
              Validate
            </wrapContext>
            <wrapContext
              icon="ChartPie"
            >
              Pizza!
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)
            canActivate={true}
            label="Cheeses"
          >
            <wrapContext>
              Gouda
            </wrapContext>
            <wrapContext>
              Cheddar
            </wrapContext>
            <wrapContext>
              Swiss
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)
            canActivate={false}
          >
            <wrapContext
              icon="Beaker"
            >
              Scary Stuff
            </wrapContext>
          </Styled(Internal)>
        </Styled(Styled(Component))>
      </HotKeys>,
      "value": Object {
        "canActivate": true,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <Styled(Internal)>
            <wrapContext
              icon="LogoRings"
            >
              Looker
            </wrapContext>
            <wrapContext
              icon="Validate"
            >
              Validate
            </wrapContext>
            <wrapContext
              icon="ChartPie"
            >
              Pizza!
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)
            canActivate={true}
            label="Cheeses"
          >
            <wrapContext>
              Gouda
            </wrapContext>
            <wrapContext>
              Cheddar
            </wrapContext>
            <wrapContext>
              Swiss
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)
            canActivate={false}
          >
            <wrapContext
              icon="Beaker"
            >
              Scary Stuff
            </wrapContext>
          </Styled(Internal)>
        </Styled(Styled(Component))>,
        "handlers": Object {
          "moveDown": [Function],
          "moveUp": [Function],
        },
        "keyMap": Object {
          "moveDown": "down",
          "moveUp": "up",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Internal)>
              <wrapContext
                icon="LogoRings"
              >
                Looker
              </wrapContext>
              <wrapContext
                icon="Validate"
              >
                Validate
              </wrapContext>
              <wrapContext
                icon="ChartPie"
              >
                Pizza!
              </wrapContext>
            </Styled(Internal)>,
            <Styled(Internal)
              canActivate={true}
              label="Cheeses"
            >
              <wrapContext>
                Gouda
              </wrapContext>
              <wrapContext>
                Cheddar
              </wrapContext>
              <wrapContext>
                Swiss
              </wrapContext>
            </Styled(Internal)>,
            <Styled(Internal)
              canActivate={false}
            >
              <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>
            </Styled(Internal)>,
          ],
          "innerRef": Object {
            "current": null,
          },
          "tabIndex": -1,
          "userSelect": "none",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": ".0",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <wrapContext
                  icon="LogoRings"
                >
                  Looker
                </wrapContext>,
                <wrapContext
                  icon="Validate"
                >
                  Validate
                </wrapContext>,
                <wrapContext
                  icon="ChartPie"
                >
                  Pizza!
                </wrapContext>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Looker",
                  "icon": "LogoRings",
                },
                "ref": null,
                "rendered": "Looker",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Validate",
                  "icon": "Validate",
                },
                "ref": null,
                "rendered": "Validate",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Pizza!",
                  "icon": "ChartPie",
                },
                "ref": null,
                "rendered": "Pizza!",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": ".1",
            "nodeType": "class",
            "props": Object {
              "canActivate": true,
              "children": Array [
                <wrapContext>
                  Gouda
                </wrapContext>,
                <wrapContext>
                  Cheddar
                </wrapContext>,
                <wrapContext>
                  Swiss
                </wrapContext>,
              ],
              "label": "Cheeses",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Gouda",
                },
                "ref": null,
                "rendered": "Gouda",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Cheddar",
                },
                "ref": null,
                "rendered": "Cheddar",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Swiss",
                },
                "ref": null,
                "rendered": "Swiss",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": ".2",
            "nodeType": "class",
            "props": Object {
              "canActivate": false,
              "children": <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Scary Stuff",
                "icon": "Beaker",
              },
              "ref": null,
              "rendered": "Scary Stuff",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {},
        "_currentValue2": Object {},
        "unstable_read": [Function],
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <HotKeys
          handlers={
            Object {
              "moveDown": [Function],
              "moveUp": [Function],
            }
          }
          keyMap={
            Object {
              "moveDown": "down",
              "moveUp": "up",
            }
          }
        >
          <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <Styled(Internal)>
              <wrapContext
                icon="LogoRings"
              >
                Looker
              </wrapContext>
              <wrapContext
                icon="Validate"
              >
                Validate
              </wrapContext>
              <wrapContext
                icon="ChartPie"
              >
                Pizza!
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)
              canActivate={true}
              label="Cheeses"
            >
              <wrapContext>
                Gouda
              </wrapContext>
              <wrapContext>
                Cheddar
              </wrapContext>
              <wrapContext>
                Swiss
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)
              canActivate={false}
            >
              <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>
            </Styled(Internal)>
          </Styled(Styled(Component))>
        </HotKeys>,
        "value": Object {
          "canActivate": true,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <Styled(Internal)>
              <wrapContext
                icon="LogoRings"
              >
                Looker
              </wrapContext>
              <wrapContext
                icon="Validate"
              >
                Validate
              </wrapContext>
              <wrapContext
                icon="ChartPie"
              >
                Pizza!
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)
              canActivate={true}
              label="Cheeses"
            >
              <wrapContext>
                Gouda
              </wrapContext>
              <wrapContext>
                Cheddar
              </wrapContext>
              <wrapContext>
                Swiss
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)
              canActivate={false}
            >
              <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>
            </Styled(Internal)>
          </Styled(Styled(Component))>,
          "handlers": Object {
            "moveDown": [Function],
            "moveUp": [Function],
          },
          "keyMap": Object {
            "moveDown": "down",
            "moveUp": "up",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Internal)>
                <wrapContext
                  icon="LogoRings"
                >
                  Looker
                </wrapContext>
                <wrapContext
                  icon="Validate"
                >
                  Validate
                </wrapContext>
                <wrapContext
                  icon="ChartPie"
                >
                  Pizza!
                </wrapContext>
              </Styled(Internal)>,
              <Styled(Internal)
                canActivate={true}
                label="Cheeses"
              >
                <wrapContext>
                  Gouda
                </wrapContext>
                <wrapContext>
                  Cheddar
                </wrapContext>
                <wrapContext>
                  Swiss
                </wrapContext>
              </Styled(Internal)>,
              <Styled(Internal)
                canActivate={false}
              >
                <wrapContext
                  icon="Beaker"
                >
                  Scary Stuff
                </wrapContext>
              </Styled(Internal)>,
            ],
            "innerRef": Object {
              "current": null,
            },
            "tabIndex": -1,
            "userSelect": "none",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <wrapContext
                    icon="LogoRings"
                  >
                    Looker
                  </wrapContext>,
                  <wrapContext
                    icon="Validate"
                  >
                    Validate
                  </wrapContext>,
                  <wrapContext
                    icon="ChartPie"
                  >
                    Pizza!
                  </wrapContext>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Looker",
                    "icon": "LogoRings",
                  },
                  "ref": null,
                  "rendered": "Looker",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Validate",
                    "icon": "Validate",
                  },
                  "ref": null,
                  "rendered": "Validate",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Pizza!",
                    "icon": "ChartPie",
                  },
                  "ref": null,
                  "rendered": "Pizza!",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "canActivate": true,
                "children": Array [
                  <wrapContext>
                    Gouda
                  </wrapContext>,
                  <wrapContext>
                    Cheddar
                  </wrapContext>,
                  <wrapContext>
                    Swiss
                  </wrapContext>,
                ],
                "label": "Cheeses",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Gouda",
                  },
                  "ref": null,
                  "rendered": "Gouda",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Cheddar",
                  },
                  "ref": null,
                  "rendered": "Cheddar",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Swiss",
                  },
                  "ref": null,
                  "rendered": "Swiss",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "canActivate": false,
                "children": <wrapContext
                  icon="Beaker"
                >
                  Scary Stuff
                </wrapContext>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Scary Stuff",
                  "icon": "Beaker",
                },
                "ref": null,
                "rendered": "Scary Stuff",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {},
          "_currentValue2": Object {},
          "unstable_read": [Function],
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Menu - composed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu>
    <Styled(Internal)>
      <wrapContext
        icon="LogoRings"
      >
        Looker
      </wrapContext>
      <wrapContext
        icon="Validate"
      >
        Validate
      </wrapContext>
      <wrapContext
        icon="ChartPie"
      >
        Pizza!
      </wrapContext>
    </Styled(Internal)>
    <Styled(Internal)
      canActivate={true}
      label="Cheeses"
    >
      <wrapContext>
        Gouda
      </wrapContext>
      <wrapContext>
        Cheddar
      </wrapContext>
      <wrapContext>
        Swiss
      </wrapContext>
    </Styled(Internal)>
    <Styled(Internal)>
      <wrapContext
        icon="Beaker"
      >
        Scary Stuff
      </wrapContext>
    </Styled(Internal)>
  </Menu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <HotKeys
        handlers={
          Object {
            "moveDown": [Function],
            "moveUp": [Function],
          }
        }
        keyMap={
          Object {
            "moveDown": "down",
            "moveUp": "up",
          }
        }
      >
        <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <Styled(Internal)>
            <wrapContext
              icon="LogoRings"
            >
              Looker
            </wrapContext>
            <wrapContext
              icon="Validate"
            >
              Validate
            </wrapContext>
            <wrapContext
              icon="ChartPie"
            >
              Pizza!
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)
            canActivate={true}
            label="Cheeses"
          >
            <wrapContext>
              Gouda
            </wrapContext>
            <wrapContext>
              Cheddar
            </wrapContext>
            <wrapContext>
              Swiss
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)>
            <wrapContext
              icon="Beaker"
            >
              Scary Stuff
            </wrapContext>
          </Styled(Internal)>
        </Styled(Styled(Component))>
      </HotKeys>,
      "value": Object {
        "canActivate": undefined,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <Styled(Internal)>
            <wrapContext
              icon="LogoRings"
            >
              Looker
            </wrapContext>
            <wrapContext
              icon="Validate"
            >
              Validate
            </wrapContext>
            <wrapContext
              icon="ChartPie"
            >
              Pizza!
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)
            canActivate={true}
            label="Cheeses"
          >
            <wrapContext>
              Gouda
            </wrapContext>
            <wrapContext>
              Cheddar
            </wrapContext>
            <wrapContext>
              Swiss
            </wrapContext>
          </Styled(Internal)>
          <Styled(Internal)>
            <wrapContext
              icon="Beaker"
            >
              Scary Stuff
            </wrapContext>
          </Styled(Internal)>
        </Styled(Styled(Component))>,
        "handlers": Object {
          "moveDown": [Function],
          "moveUp": [Function],
        },
        "keyMap": Object {
          "moveDown": "down",
          "moveUp": "up",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Internal)>
              <wrapContext
                icon="LogoRings"
              >
                Looker
              </wrapContext>
              <wrapContext
                icon="Validate"
              >
                Validate
              </wrapContext>
              <wrapContext
                icon="ChartPie"
              >
                Pizza!
              </wrapContext>
            </Styled(Internal)>,
            <Styled(Internal)
              canActivate={true}
              label="Cheeses"
            >
              <wrapContext>
                Gouda
              </wrapContext>
              <wrapContext>
                Cheddar
              </wrapContext>
              <wrapContext>
                Swiss
              </wrapContext>
            </Styled(Internal)>,
            <Styled(Internal)>
              <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>
            </Styled(Internal)>,
          ],
          "innerRef": Object {
            "current": null,
          },
          "tabIndex": -1,
          "userSelect": "none",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <wrapContext
                  icon="LogoRings"
                >
                  Looker
                </wrapContext>,
                <wrapContext
                  icon="Validate"
                >
                  Validate
                </wrapContext>,
                <wrapContext
                  icon="ChartPie"
                >
                  Pizza!
                </wrapContext>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Looker",
                  "icon": "LogoRings",
                },
                "ref": null,
                "rendered": "Looker",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Validate",
                  "icon": "Validate",
                },
                "ref": null,
                "rendered": "Validate",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Pizza!",
                  "icon": "ChartPie",
                },
                "ref": null,
                "rendered": "Pizza!",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "canActivate": true,
              "children": Array [
                <wrapContext>
                  Gouda
                </wrapContext>,
                <wrapContext>
                  Cheddar
                </wrapContext>,
                <wrapContext>
                  Swiss
                </wrapContext>,
              ],
              "label": "Cheeses",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Gouda",
                },
                "ref": null,
                "rendered": "Gouda",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Cheddar",
                },
                "ref": null,
                "rendered": "Cheddar",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Swiss",
                },
                "ref": null,
                "rendered": "Swiss",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Scary Stuff",
                "icon": "Beaker",
              },
              "ref": null,
              "rendered": "Scary Stuff",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {},
        "_currentValue2": Object {},
        "unstable_read": [Function],
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <HotKeys
          handlers={
            Object {
              "moveDown": [Function],
              "moveUp": [Function],
            }
          }
          keyMap={
            Object {
              "moveDown": "down",
              "moveUp": "up",
            }
          }
        >
          <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <Styled(Internal)>
              <wrapContext
                icon="LogoRings"
              >
                Looker
              </wrapContext>
              <wrapContext
                icon="Validate"
              >
                Validate
              </wrapContext>
              <wrapContext
                icon="ChartPie"
              >
                Pizza!
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)
              canActivate={true}
              label="Cheeses"
            >
              <wrapContext>
                Gouda
              </wrapContext>
              <wrapContext>
                Cheddar
              </wrapContext>
              <wrapContext>
                Swiss
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)>
              <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>
            </Styled(Internal)>
          </Styled(Styled(Component))>
        </HotKeys>,
        "value": Object {
          "canActivate": undefined,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <Styled(Internal)>
              <wrapContext
                icon="LogoRings"
              >
                Looker
              </wrapContext>
              <wrapContext
                icon="Validate"
              >
                Validate
              </wrapContext>
              <wrapContext
                icon="ChartPie"
              >
                Pizza!
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)
              canActivate={true}
              label="Cheeses"
            >
              <wrapContext>
                Gouda
              </wrapContext>
              <wrapContext>
                Cheddar
              </wrapContext>
              <wrapContext>
                Swiss
              </wrapContext>
            </Styled(Internal)>
            <Styled(Internal)>
              <wrapContext
                icon="Beaker"
              >
                Scary Stuff
              </wrapContext>
            </Styled(Internal)>
          </Styled(Styled(Component))>,
          "handlers": Object {
            "moveDown": [Function],
            "moveUp": [Function],
          },
          "keyMap": Object {
            "moveDown": "down",
            "moveUp": "up",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Internal)>
                <wrapContext
                  icon="LogoRings"
                >
                  Looker
                </wrapContext>
                <wrapContext
                  icon="Validate"
                >
                  Validate
                </wrapContext>
                <wrapContext
                  icon="ChartPie"
                >
                  Pizza!
                </wrapContext>
              </Styled(Internal)>,
              <Styled(Internal)
                canActivate={true}
                label="Cheeses"
              >
                <wrapContext>
                  Gouda
                </wrapContext>
                <wrapContext>
                  Cheddar
                </wrapContext>
                <wrapContext>
                  Swiss
                </wrapContext>
              </Styled(Internal)>,
              <Styled(Internal)>
                <wrapContext
                  icon="Beaker"
                >
                  Scary Stuff
                </wrapContext>
              </Styled(Internal)>,
            ],
            "innerRef": Object {
              "current": null,
            },
            "tabIndex": -1,
            "userSelect": "none",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <wrapContext
                    icon="LogoRings"
                  >
                    Looker
                  </wrapContext>,
                  <wrapContext
                    icon="Validate"
                  >
                    Validate
                  </wrapContext>,
                  <wrapContext
                    icon="ChartPie"
                  >
                    Pizza!
                  </wrapContext>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Looker",
                    "icon": "LogoRings",
                  },
                  "ref": null,
                  "rendered": "Looker",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Validate",
                    "icon": "Validate",
                  },
                  "ref": null,
                  "rendered": "Validate",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Pizza!",
                    "icon": "ChartPie",
                  },
                  "ref": null,
                  "rendered": "Pizza!",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "canActivate": true,
                "children": Array [
                  <wrapContext>
                    Gouda
                  </wrapContext>,
                  <wrapContext>
                    Cheddar
                  </wrapContext>,
                  <wrapContext>
                    Swiss
                  </wrapContext>,
                ],
                "label": "Cheeses",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Gouda",
                  },
                  "ref": null,
                  "rendered": "Gouda",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Cheddar",
                  },
                  "ref": null,
                  "rendered": "Cheddar",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "Swiss",
                  },
                  "ref": null,
                  "rendered": "Swiss",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <wrapContext
                  icon="Beaker"
                >
                  Scary Stuff
                </wrapContext>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Scary Stuff",
                  "icon": "Beaker",
                },
                "ref": null,
                "rendered": "Scary Stuff",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {},
          "_currentValue2": Object {},
          "unstable_read": [Function],
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Menu - focusOnMount 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    focusOnMount={true}
  >
    <wrapContext>
      boo!
    </wrapContext>
  </Menu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <HotKeys
        handlers={
          Object {
            "moveDown": [Function],
            "moveUp": [Function],
          }
        }
        keyMap={
          Object {
            "moveDown": "down",
            "moveUp": "up",
          }
        }
      >
        <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <wrapContext>
            boo!
          </wrapContext>
        </Styled(Styled(Component))>
      </HotKeys>,
      "value": Object {
        "canActivate": undefined,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <wrapContext>
            boo!
          </wrapContext>
        </Styled(Styled(Component))>,
        "handlers": Object {
          "moveDown": [Function],
          "moveUp": [Function],
        },
        "keyMap": Object {
          "moveDown": "down",
          "moveUp": "up",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <wrapContext>
              boo!
            </wrapContext>,
          ],
          "innerRef": Object {
            "current": null,
          },
          "tabIndex": -1,
          "userSelect": "none",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": ".0",
            "nodeType": "function",
            "props": Object {
              "children": "boo!",
            },
            "ref": null,
            "rendered": "boo!",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {},
        "_currentValue2": Object {},
        "unstable_read": [Function],
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <HotKeys
          handlers={
            Object {
              "moveDown": [Function],
              "moveUp": [Function],
            }
          }
          keyMap={
            Object {
              "moveDown": "down",
              "moveUp": "up",
            }
          }
        >
          <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <wrapContext>
              boo!
            </wrapContext>
          </Styled(Styled(Component))>
        </HotKeys>,
        "value": Object {
          "canActivate": undefined,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <wrapContext>
              boo!
            </wrapContext>
          </Styled(Styled(Component))>,
          "handlers": Object {
            "moveDown": [Function],
            "moveUp": [Function],
          },
          "keyMap": Object {
            "moveDown": "down",
            "moveUp": "up",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <wrapContext>
              boo!
            </wrapContext>,
            "innerRef": Object {
              "current": null,
            },
            "tabIndex": -1,
            "userSelect": "none",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "boo!",
            },
            "ref": null,
            "rendered": "boo!",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {},
          "_currentValue2": Object {},
          "unstable_read": [Function],
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Menu 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu>
    <wrapContext>
      boo!
    </wrapContext>
  </Menu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <HotKeys
        handlers={
          Object {
            "moveDown": [Function],
            "moveUp": [Function],
          }
        }
        keyMap={
          Object {
            "moveDown": "down",
            "moveUp": "up",
          }
        }
      >
        <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <wrapContext>
            boo!
          </wrapContext>
        </Styled(Styled(Component))>
      </HotKeys>,
      "value": Object {
        "canActivate": undefined,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Styled(Component))
          innerRef={
            Object {
              "current": null,
            }
          }
          tabIndex={-1}
          userSelect="none"
        >
          <wrapContext>
            boo!
          </wrapContext>
        </Styled(Styled(Component))>,
        "handlers": Object {
          "moveDown": [Function],
          "moveUp": [Function],
        },
        "keyMap": Object {
          "moveDown": "down",
          "moveUp": "up",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <wrapContext>
              boo!
            </wrapContext>,
          ],
          "innerRef": Object {
            "current": null,
          },
          "tabIndex": -1,
          "userSelect": "none",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": ".0",
            "nodeType": "function",
            "props": Object {
              "children": "boo!",
            },
            "ref": null,
            "rendered": "boo!",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {},
        "_currentValue2": Object {},
        "unstable_read": [Function],
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <HotKeys
          handlers={
            Object {
              "moveDown": [Function],
              "moveUp": [Function],
            }
          }
          keyMap={
            Object {
              "moveDown": "down",
              "moveUp": "up",
            }
          }
        >
          <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <wrapContext>
              boo!
            </wrapContext>
          </Styled(Styled(Component))>
        </HotKeys>,
        "value": Object {
          "canActivate": undefined,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Styled(Styled(Component))
            innerRef={
              Object {
                "current": null,
              }
            }
            tabIndex={-1}
            userSelect="none"
          >
            <wrapContext>
              boo!
            </wrapContext>
          </Styled(Styled(Component))>,
          "handlers": Object {
            "moveDown": [Function],
            "moveUp": [Function],
          },
          "keyMap": Object {
            "moveDown": "down",
            "moveUp": "up",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <wrapContext>
              boo!
            </wrapContext>,
            "innerRef": Object {
              "current": null,
            },
            "tabIndex": -1,
            "userSelect": "none",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "boo!",
            },
            "ref": null,
            "rendered": "boo!",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {},
          "_currentValue2": Object {},
          "unstable_read": [Function],
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
